# Noita-FerretMod

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: pack-mod.yml
ferret_mod/: compatibility.xml  init.lua  mod.xml  settings.lua  workshop.xml
ferret_mod/files/: config_utils.lua  ferret.xml  ferret_genomes.lua  ferret_path.xml
ferret_mod/files/actions/: gun_actions.lua
ferret_mod/files/biomes/: ferret_altar_appends.lua  ferret_biome_appends.lua
ferret_mod/files/ferret_gfx/: beans.xml  ghost.xml  henry.xml  loki.xml
ferret_mod/files/ferret_gfx/bullet_shape/: beans.xml  ghost.xml  henry.xml  loki.xml
ferret_mod/files/ferret_ragdolls/beans/: filenames.txt
ferret_mod/files/ferret_ragdolls/ghost/: filenames.txt
ferret_mod/files/ferret_ragdolls/henry/: filenames.txt
ferret_mod/files/ferret_ragdolls/loki/: filenames.txt
ferret_mod/files/ferrets/: beans.xml  ghost.xml  henry.xml  loki.xml
ferret_mod/files/scripts/: ferret.lua  ferret_path.lua  ferret_utils.lua
ferret_mod/files/streaming_integration/: ferret_events.lua
resources/: gen_ragdolls.py  gen_spritesheet.py
